<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="name:"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/crt_name_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="description:"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/crt_desc_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="balance:"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/crt_balance_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/crt_account_but_go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#81f422"
        android:text="create account" />
</LinearLayout>