<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="description:"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/crt_oper_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="account on:"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/account_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="value:"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/bablo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="type:"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/crt_oper_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="category:"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/crt_oper_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>
<Button
    android:id="@+id/crt_oper_but_go"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#81f422"
    android:text="create operation"/>

</LinearLayout>