<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">
    <Button
        android:id="@+id/crt_oper_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#81f422"
        android:text="New operation" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/delete_acc_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#ef3b3e"
            android:text="Delete account" />

        <Button
            android:id="@+id/delete_oper_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#ef3b3e"
            android:text="Delete operations" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <ListView
            android:id="@+id/listOperation"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>